--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
+# Dependencies
 node_modules/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# MacOS
+.DS_Store
+
+# Build outputs
+build/
+dist/
+
+# IDE
+.vscode/
+.idea/
